# django-rest-products

./: README.md
Bnex-Backend/: Dockerfile  docker-compose.yml  mkdocs.yml  pyproject.toml  requirements.txt
Bnex-Backend/core/: settings.py  urls.py  wsgi.py
Bnex-Backend/docs/: index.md
Bnex-Backend/docs/stylesheets/: extra.css
Bnex-Backend/login/: admin.py  models.py  serializers.py  urls.py  validators.py  views.py
Bnex-Backend/login/migrations/: 0001_initial.py
Bnex-Backend/login/tests/: test_login.py  test_unit.py
Bnex-Backend/product/: models.py  serializers.py  urls.py  views.py
Bnex-Backend/product/migrations/: 0001_initial.py  0002_alter_product_options.py
Bnex-Backend/product/tests/: conftest.py  test_products.py
Bnex-frontend/: .gitignore  Dockerfile  db.sqlite3  pyproject.toml  requirements.txt
Bnex-frontend/core/: settings.py  urls.py
Bnex-frontend/products/: urls.py  views.py
Bnex-frontend/products/templates/: delete.html  detail.html  list.html  new.html  update.html
Bnex-frontend/templates/: base.html
Bnex-frontend/templates/static/geral/css/: base.css
Bnex-frontend/templates/static/products/css/: products.css
Bnex-frontend/templates/static/users/css/: users.css
Bnex-frontend/users/: urls.py  views.py
Bnex-frontend/users/templates/: login.html  register.html
