[tool.poetry]
name = "bnex-frontend"
version = "0.1.0"
description = ""
authors = ["Juan Carlos Leone Barreto <jc.leone98@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.1"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
